# pepper_plymouth_ros

./: CMakeLists.txt  package.xml
launch/: amcl-old.launch  amcl.launch~  depth_cloud.launch~  depth_laser.launch  mapping.launch  mapping.launch~  nav.launch  nav.launch~  octomap_mapping.launch  perception.launch  task-executor.launch  task-executor.launch~  top_nav.launch~
nav_conf/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml~  local_costmap_params.yaml  local_costmap_params.yaml~  move_base_params.yaml  move_base_params.yaml~
